# mimick

./: .gitignore  AI_CONTEXT.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build_test_appimage.sh  cargo-sources.json  install-appimage.sh  install.sh  io.github.nicx17.mimick.local.yml  io.github.nicx17.mimick.yml  pyproject.toml  requirements.txt  roadmap.md  setup.py  uninstall-appimage.sh  uninstall.sh
.github/workflows/: codeql.yml  flatpak-repo.yml  release.yml
docs/: APPIMAGE_CREATION.md  ARCHITECTURE.md  CONFIGURATION.md  DEVELOPMENT.md  TESTING.md  TROUBLESHOOTING.md  USER_GUIDE.md
setup/: PKGBUILD  immich-sync.desktop  io.github.nicx17.mimick.desktop  mimick.desktop  mimick.service
setup/metainfo/: com.nickcardoso.immich_sync.appdata.xml  io.github.nicx17.mimick.metainfo.xml
src/: api_client.py  api_client.rs  autostart.rs  config.py  config.rs  log_setup.py  main.py  main.rs  monitor.py  monitor.rs  notifications.rs  queue_manager.py  queue_manager.rs  restart.rs  settings_main.py  settings_window.py  settings_window.rs  state_manager.rs  tray_icon.py  tray_icon.rs  watch_path_display.rs
tests/: test_api_client.py  test_config.py  test_monitor.py  test_queue_manager.py
