[package]
name = "mimick"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "6.0.0"
env_logger = "0.11.9"
glib = "0.22.2"
gtk = { version = "0.11.0", package = "gtk4", features = ["v4_12"] }
image = "0.25.9"
ksni = "0.3.3"
lazy_static = "1.5.0"
libadwaita = { version = "0.9.1", features = ["v1_4"] }
log = "0.4.29"
notify = "8.2.0"
reqwest = { version = "0.13.2", features = ["json", "multipart", "rustls", "stream"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha1 = "0.10.6"
tokio = { version = "1.50.0", features = ["full"] }

[dev-dependencies]
tempfile = "3.26.0"
