[package]
name = "mimick"
version = "3.0.0"
edition = "2024"

[dependencies]
dirs = "6.0.0"
glib = "0.22.2"
gtk = { version = "0.11.0", package = "gtk4", features = ["v4_12"] }
ksni = "0.3.3"
lazy_static = "1.5.0"
libadwaita = { version = "0.9.1", features = ["v1_4"] }
log = "0.4.29"
notify = "8.2.0"
reqwest = { version = "0.13.2", features = ["json", "multipart", "rustls", "stream"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha1 = "0.10.6"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "sync", "time", "fs", "macros", "io-util", "process"] }
flexi_logger = "0.31.8"

[dev-dependencies]
tempfile = "3.26.0"

[profile.release]
opt-level = "z"        # Optimise for binary size (less code = less mapped pages)
codegen-units = 1      # Full whole-program optimisation
lto = true             # Link-Time Optimisation – dead code is stripped at link time
panic = "abort"        # Remove panic unwinding machinery (~60-100 KB of runtime)
strip = true           # Strip debug symbols from the final binary
