[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "immich-sync"
version = "0.2.0b0"
description = "A background daemon to auto-sync photos to Immich on Linux"
readme = "README.md"
authors = [
  { name = "Nick", email = "nick@nickcardoso.com" },
]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "watchdog>=4.0.0",
    "requests>=2.31.0",
    "keyring>=24.3.0",
    "pystray>=0.19.5",
    "Pillow>=10.2.0",
    "PySide6>=6.6.1",
]
requires-python = ">=3.10"

[project.urls]
"Homepage" = "https://github.com/nicx17/immich_sync_app"
"Bug Tracker" = "https://github.com/nicx17/immich_sync_app/issues"

[project.scripts]
immich-sync = "src.main:main"
