[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mimick"
version = "2.0.0"
description = "A background daemon to auto-sync photos to Immich on Linux"
readme = "README.md"
authors = [
  { name = "Nick", email = "nick@nickcardoso.com" },
]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "watchdog>=4.0.0",
    "requests>=2.31.0",
    "keyring>=24.3.0",
    "pystray>=0.19.5",
    "Pillow>=10.2.0",
    "PyGObject>=3.42.0",
]
requires-python = ">=3.10"

[project.urls]
"Homepage" = "https://github.com/nicx17/immich_sync_app"
"Bug Tracker" = "https://github.com/nicx17/immich_sync_app/issues"

[project.scripts]
mimick = "src.main:main"
